src/test/resources/validation/warning/unknownColumnForImplicitJoin/schema.graphqls
type Query {
  customer(id: ID!): Customer
}

type Customer @table {
  id: ID!
  address: CustomerAddress!
}

type CustomerAddress  {
  district: String @column(name: "district", table: "ADDRESS") #should NOT trigger warning
  destruct: String @column(name: "destruct", table: "ADDRESS") #non-existent column, should trigger warning
}
